# game_engine

./: .gitignore  .gitmodules  ATE1.md  ATE1.puml  ATE3.md  CMakeLists.txt  OpenGLWindow.cpp  SDL2Window.cpp  SDL2Window.h  main.cpp
cmake/: FindSDL2_ttf.cmake
src/: Application.cpp  Application.h  Chronometer.cpp  Chronometer.h  Event.cpp  Event.h  GLContext.cpp  GLContext.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  OpenGLWindow.cpp  OpenGLWindow.h  SDL2Window.cpp  SDL2Window.h  Screensaver.cpp  Screensaver.h  Singleton.cpp  Singleton.h  TTFont.cpp  TTFont.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
src/math/: ATE02.md  Matrix44d.cpp  Matrix44d.h  Vector3d.cpp  Vector3d.h
